bug fixed: adjusted overflow-y for body styling

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -8,7 +8,7 @@
 }
 
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
